<resources>
    <string name="app_name">仓库PDA</string>
    <string-array name="options_array">
        <item>主页</item>
        <item>特殊入库</item>
        <item>解绑与绑定</item>
        <item>剪布管理</item>
        <item>查布管理</item>
        <item>备货管理</item>
        <item>出库管理</item>
        <item>设备管理</item>
        <item>关于</item>
        <item>出库测试</item>
        <item>连接PDA</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_image_desc">Icon for the Navigation drawer item</string>
    <string name="drawer_item_text">Drawer Item</string>
    <string name="btn_special_storage">特特殊入库</string>
    <string name="btn_unBindOrBind">解绑与绑定</string>
    <string name="btn_cuttingCloth">剪布</string>
    <string name="btn_checkingCloth">查布</string>
    <string name="btn_stockUp">备货</string>
    <string name="btn_stockRemoval">出库</string>
    <string name="btn_deviceManagment">设备管理</string>
    <string name="btn_about">关于</string>
    <string name="btn_out_demo">出库Demo</string>
    <string name="btn_connect_pda">链接PDA</string>
    <string name="RFID_demo_app">WareHouse RFID PDA Application</string>
    <string name="moto_solutions">RIDKO Technologies</string>
    <string name="app_version_title">Application Version</string>
    <string name="colon">:</string>
    <string name="app_version">18.0.1</string>
    <string name="system_version_title">System Version</string>
    <string name="system_version">18.0.1</string>
    <string name="device_number_title">Device Number</string>
    <string name="device_number">JiaQian_01</string>
    <string name="system_sled">System Sled</string>
    <string name="copyright_info">Copyright © 2018</string>
    <string name="user_managment_group">用户管理</string>
    <string name="system_managment_group">系统管理</string>
    <string name="device_managment_group">设备管理</string>
    <string name="user_managment_title">用户管理</string>
    <string name="system_managment_title">系统管理</string>
    <string name="device_managment_title">设备管理</string>
    <string name="system_version_key">系统版本</string>
    <string name="system_version_summary">V2018.6.26</string>
    <string name="system_ip_key">IP</string>
    <string name="system_ip_summary">192.168.0.1</string>
    <string name="system_port_key">端口</string>
    <string name="system_port_summary">8080</string>
    <string name="system_device_number_key">设备号</string>
    <string name="system_device_number_summary">S.B.H.1234</string>
    <string name="system_push_title">推送</string>
    <string name="system_push_key">系统推送</string>
    <string name="system_push_summary">当有系统消息通知时提醒</string>
    <string name="all_volume_title">Title</string>
    <string name="device_prower_key">功率</string>
    <string name="device_work_time_key">工作时间</string>
    <string name="device_interval_time_key">间隔时间</string>
    <string name="user_message_key">用户信息</string>
    <string name="user_jurisdiction_summary">权限</string>
    <string name="user_in_storage_key">入库</string>
    <string name="user_stock_up_key">备货</string>
    <string name="user_out_storage_key">出库</string>
    <string name="user_move_key">剪布/查布/合仓</string>
    <string name="user_time_title">登录时间：</string>
    <string name="user_time">time</string>
    <string name="user_name_title">用户名：</string>
    <string name="user_name">Administrator</string>
    <string name="user_id_title">用户编号：</string>
    <string name="user_id">JQ20180511</string>
    <string name="text15">用户管理</string>
    <string name="text16">系统管理</string>
    <string name="text17">设备管理</string>
    <string name="text18">陈某某</string>
    <string name="text19">&#8195;ID:YF0987654&#8195;</string>
    <string name="text20">16:57:30</string>
    <string name="text21">岗&#8195;位&#8195;：</string>
    <string name="text22">杂工</string>
    <string name="text23">修改密码</string>
    <string name="text24">退出/切换账号</string>
    <string name="text25">原密码&#8195;:&#8197;</string>
    <string name="text26">新密码&#8195;:&#8197;</string>
    <string name="text27">确认密码:&#8197;</string>
    <string name="text28">请输入相同的新密码</string>
    <string name="text29">请输入正确的原密码</string>
    <string name="text30">重置</string>
    <string name="text31">30dBM</string>
    <string name="text32">GEN2</string>
    <string name="text33">区域</string>
    <string name="text34">算法</string>
    <string name="text35">起始</string>
    <string name="text36">最小Q</string>
    <string name="text37">最大Q</string>
    <string name="text38">存储</string>
    <string name="text39">区域</string>
    <string name="text56">恢复设置</string>
    <string-array name="arithmetic_array">
        <item>固态</item>
        <item>动态</item>
    </string-array>
    <string-array name="Q_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="storage_array">
        <item>不保存</item>
        <item>保存</item>
    </string-array>
    <string-array name="area_array">
        <item>China1</item>
        <item>China2</item>
        <item>Europe</item>
        <item>USA</item>
        <item>Korea</item>
        <item>Japan</item>
    </string-array>
    <string name="edittext_title">请输入申请单号</string>
    <string name="text_search">搜索</string>
    <string name="text_noresult">暂无搜索结果</string>
    <string name="stockRemoval_hint">请输入正确出库信息</string>
    <string name="dialog_title">提醒</string>
    <string name="dialog_blink">是否激活LED显示屏</string>
    <string name="button_yes">确定</string>
    <string name="button_no">取消</string>
    <string name="button_1">闪烁</string>
    <string name="button_2">完成</string>
    <string name="text1">出库单号：</string>
    <string name="text2">状&#8195;态&#8195;：</string>
    <string name="text3">看板数量：</string>
    <string name="text4">请输入采购单号</string>
    <string name="text5">采购单号：JQ123456789</string>
    <string name="text6">确定完成备货？</string>
    <string name="button3">备货操作</string>
    <string name="button4">完成备货</string>
    <string name="button5">解绑</string>
    <string name="button6">绑定</string>
    <string name="text7">绑定布匹信息</string>
    <string name="text8">解绑布匹信息</string>
    <string name="text9">总数：10</string>
    <string name="text10">载具编号：</string>
    <string name="text11">载具EPC&#8197;：</string>
    <string name="text12">布号</string>
    <string name="text13">布匹名称</string>
    <string name="text14">布票号</string>
    <string name="text40">请输入采购单号：</string>
    <string name="text41">请输入退货单号：</string>
    <string name="button7">录入缸号</string>
    <string name="button8">入库明细</string>
    <string name="button9">入库操作</string>
    <string name="button10">完成入库</string>
    <string name="button11">写码上传</string>
    <string name="text42">入库信息</string>
    <string name="text43">布&#8195;号&#8195;：</string>
    <string name="text44">布匹名称：</string>
    <string name="text45">染厂色号：</string>
    <string name="text46">条&#8195;数&#8195;：</string>
    <string name="text47">克&#8195;重&#8195;：</string>
    <string name="text48">缸&#8195;号&#8195;：</string>
    <string name="text49">载&#8195;具&#8195;：</string>
    <string name="text50">布&#8195;号&#8195;：</string>
    <string name="text51">名&#8195;称&#8195;：</string>
    <string name="text52">色&#8195;号&#8195;：</string>
    <string name="text53">克&#8195;重&#8195;：</string>
    <string name="text54">重&#8195;量&#8195;：</string>
    <string name="text55">布票号&#8195;：</string>
    <string name="button12">生成EPC</string>
    <string name="text57">缸号</string>
    <string name="text58">色号</string>
    <string name="text59">配货条数</string>
    <string name="text60">状态</string>
    <string name="button13">查询</string>
    <string name="button14">扫描</string>
    <string name="text61">是否生成出库单出库？</string>
    <string name="text62">读取条数</string>
    <string name="text63">操作</string>
    <string name="text64">查找不到该申请单号信息，请查询单号或检查网络后尝试！</string>
    <string name="text65">所输入的申请单号为空，请查询后重试！</string>
    <string name="text66">申请单号</string>
    <string name="text67">查看详情</string>
    <string name="button15">返回</string>
    <string name="text68">编号</string>
    <string name="text69">备&#8195;注：</string>
    <string name="text70">申请单号：</string>
    <string name="text71">入库时间：</string>
    <string name="text72">成品出仓</string>
    <string name="text73">申请编号：</string>
    <string name="text74">申请类型：</string>
    <string name="text75">申请备注：</string>
    <string name="text76">客户名称：</string>
    <string name="text77">创建：</string>
    <string name="text78">修改：</string>
    <string name="text79">布匹条数</string>
    <string name="text80">布种名称</string>
    <string name="text81">布匹色号</string>
    <string name="text82">布匹颜色</string>
    <string name="outBoundUploadFail">出库信息上传失败！</string>
    <string name="fixedText">入库单号：</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antenna</string>
    <string name="title_activity_readers_list">Readers List</string>
    <string name="title_activity_application_settings">Application</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>RESV</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
</resources>