<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:descendantFocusability="blocksDescendants">
        <TextView
            android:id="@+id/item1"
            android:layout_width="50dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text68"
            />
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item2"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text57"/>
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item3"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text12"/>
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item4"
            android:layout_width="160dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text80"/>
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item5"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text81"/>
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item6"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text82"/>
        <View
            style="@style/view_item_mid"/>
        <TextView
            android:id="@+id/item7"
            android:layout_width="100dip"
            android:layout_height="match_parent"
            style="@style/text_style3"
            android:text="@string/text79"/>
        <View
            style="@style/view_item_mid"/>
    </LinearLayout>
    <View
        style="@style/view_item_bottom"/>
</LinearLayout>