<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layout"
        android:layout_weight="2">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dip"
                android:layout_height="match_parent"
                android:src="@drawable/set_up"
                />
            <View
                style="@style/view_item_mid"/>
            <TextView
                android:layout_width="120dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text57"/>
            <View
                style="@style/view_item_mid"/>
            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text58"/>
            <View
                style="@style/view_item_mid"/>
            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text59"/>
            <View
                style="@style/view_item_mid"/>
            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text62"/>
            <View
                style="@style/view_item_mid"/>
            <TextView
                android:layout_width="60dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text12"/>
            <View
                style="@style/view_item_mid"/>

            <TextView
                android:layout_width="80dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text60"/>
            <View
                style="@style/view_item_mid"/>

            <TextView
                android:layout_width="80dip"
                android:layout_height="match_parent"
                style="@style/text_style7"
                android:text="@string/text60"/>
        </LinearLayout>
        <View
            style="@style/view_item_bottom"/>
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>
    </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_blink"
            style="@style/button_style5"
            android:layout_width="match_parent"
            android:text="@string/button14"
            android:layout_marginLeft="30px"
            android:layout_marginRight="20px"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_ok"
            style="@style/button_style6"
            android:layout_width="match_parent"
            android:text="@string/btn_stockRemoval"
            android:layout_marginLeft="20px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>