<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_style2"
        android:background="@drawable/bg_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            style="@style/text_style3"
            android:text="@string/system_version_key"
            />
        <EditText
            android:id="@+id/edit4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/system_version_summary"
            style="@style/edit_style2"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_style2"
        android:background="@drawable/bg_layout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            style="@style/text_style3"
            android:text="@string/system_ip_key"
            />
        <EditText
            android:id="@+id/edit1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/system_ip_summary"
            style="@style/edit_style2"/>
       <!-- <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10px"
            android:gravity="center_vertical"
            style="@style/text_style1"
            android:text="@string/system_ip_summary"
            />-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_style2"
        android:background="@drawable/bg_layout2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            style="@style/text_style3"
            android:text="@string/system_port_key"
            />
        <EditText
            android:id="@+id/edit2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/system_port_summary"
            style="@style/edit_style2"/>
        <!--<TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10px"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            style="@style/text_style1"
            android:text="@string/system_port_summary"
            />-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_style2"
        android:background="@drawable/bg_layout"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            style="@style/text_style3"
            android:text="@string/system_device_number_key"
            />
        <EditText
            android:id="@+id/edit3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/system_device_number_summary"
            style="@style/edit_style2"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        style="@style/text_style2"
        android:layout_marginLeft="30px"
        android:gravity="center_vertical"
        android:text="@string/system_push_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        style="@style/layout_style2"
        android:background="@drawable/bg_layout"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginLeft="30dp"
            android:gravity="center_vertical"
            style="@style/text_style3"
            android:text="@string/system_push_key"
            />
        <Switch
            android:id="@+id/switch1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_weight="3"
            style="@style/switch_style_1"
            android:checked="true"
            android:maxHeight="10dp"
            />
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:text="@string/text30"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/button_style7"
        android:layout_marginBottom="30dp"/>
</LinearLayout>