<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/user_layout">
    <ImageView
        android:id="@+id/headImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/tourist"
        android:layout_alignParentTop="true"
        style="@style/style_head"/>
<!--
    <TextView
        android:id="@+id/login_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="@+id/headImage"
        android:textSize="12dp"
        style="@style/head_time_magin"
        android:text="@string/user_time"/>-->
   <!-- <TextView
        android:id="@+id/login_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="@+id/headImage"
        android:textSize="12dp"
        style="@style/head_time_magin"
        android:layout_toLeftOf="@+id/login_time"
        android:text="@string/user_time_title"/>-->

    <TextView
        android:id="@+id/user_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/headImage"
        android:layout_toRightOf="@+id/headImage"
        android:textColor="@color/colerUserText"
        android:text="@string/user_id_title"
        style="@style/head_margin"/>
    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_id_title"
        android:layout_toRightOf="@+id/user_id_title"
        android:textColor="@color/colerUserText"
        android:text="@string/user_id"/>

    <TextView
        android:id="@+id/user_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/user_name_title"
        android:textColor="@color/colerUserText"
        android:layout_toRightOf="@+id/headImage"
        android:layout_alignTop="@+id/headImage"
        style="@style/head_margin"
        />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/user_name"
        android:textColor="@color/colerUserText"
        android:layout_toRightOf="@id/user_name_title"
        android:layout_alignBottom="@+id/user_name_title"
        />
</RelativeLayout>